edit text main page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="orange">The orange square give one part more to the snake and 10 points</div>
         <div class="purple">The purple square subtracts 30 points</div>
         <div class="black">The black square is a wall, the snake dies</div>
-        <div >Use the W key to move up, the A to move to the left and the D to move to the right</div>
+        <div >Use the W key to move up,the S to move down, the A to move to the left, and the D to move to the right</div>
       </div>
   </div>
  
